--- a/graduatetracer/tracer/templates/tracer/user/post_list.html
+++ b/graduatetracer/tracer/templates/tracer/user/post_list.html
@@ -249,9 +249,9 @@
                      {{grad_info.skill}}
                     </div>
                   </div>
-                  <div class="modal-footer">
-                    <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
-                  </div>
+                <div class="modal-footer">
+                    <button class="red" type="button" data-dismiss = "modal"><i class="icon ion-md-lock"></i> Close</button>
+            </div>
           </div>
         </form>
       </div>
