--- a/graduatetracer/tracer/templates/tracer/systemadmin/displayannounce.html
+++ b/graduatetracer/tracer/templates/tracer/systemadmin/displayannounce.html
@@ -1,5 +1,5 @@
 {%  extends 'tracer/systemadmin/templates.html' %}
-
+{% block title %}Display Announcement{% endblock %}
 {% load widget_tweaks %}
 
 {% block content %}
