--- a/graduatetracer/tracer/templates/tracer/systemadmin/user_graduates.html
+++ b/graduatetracer/tracer/templates/tracer/systemadmin/user_graduates.html
@@ -1,4 +1,5 @@
 {%  extends 'tracer/systemadmin/templates.html' %}
+{% block title %}User Graduates{% endblock %}
 {% load static %}
 {% load humanize %}
 
