--- a/graduatetracer/tracer/templates/tracer/systemadmin/usergrad_info.html
+++ b/graduatetracer/tracer/templates/tracer/systemadmin/usergrad_info.html
@@ -1,5 +1,5 @@
 {%  extends 'tracer/systemadmin/templates.html' %}
-
+{% block title %}User Graduates Information{% endblock %}
 {% load static %}
 {% load widget_tweaks %}
 
