--- a/graduatetracer/tracer/templates/tracer/user/DisplayInfo.html
+++ b/graduatetracer/tracer/templates/tracer/user/DisplayInfo.html
@@ -1,4 +1,5 @@
 {% extends 'tracer/user/template.html'%}
+{% block title %}Display Users' Information{% endblock %}
 {% load static %}
 {% block content %}
 <link href="{% static 'css/Display.css' %}" rel="stylesheet">
@@ -43,6 +44,15 @@
                     </div>
                     <div class="col-sm-9 text-secondary">
                       {{user.email}}
+                    </div>
+                  </div>
+                  <hr>
+                  <div class="row">
+                    <div class="col-sm-3">
+                      <h6 class="mb-0">School</h6>
+                    </div>
+                    <div class="col-sm-9 text-secondary">
+                      {{user.school}}
                     </div>
                   </div>
                   <hr>
