--- a/graduatetracer/tracer/templates/tracer/user/JobExperience/AddExperience.html
+++ b/graduatetracer/tracer/templates/tracer/user/JobExperience/AddExperience.html
@@ -1,4 +1,5 @@
 {% extends 'tracer/user/template.html'%}
+{% block title %}Add Experience{% endblock %}
 {% load static %}
 {% block content %}
 <div class="container mt-4">
