--- a/graduatetracer/tracer/templates/tracer/user/dashboard.html
+++ b/graduatetracer/tracer/templates/tracer/user/dashboard.html
@@ -1,5 +1,5 @@
 {%  extends 'tracer/user/template.html' %}
-
+{% block title %}My Dashboard{% endblock %}
 {% load widget_tweaks %}
 
 {% block content %}
