--- a/graduatetracer/tracer/templates/tracer/user/notification_announcements.html
+++ b/graduatetracer/tracer/templates/tracer/user/notification_announcements.html
@@ -1,4 +1,5 @@
 {%  extends 'tracer/user/template.html' %}
+{% block title %}Announcements Notifications{% endblock %}
 {% load static %}
 
 {% block content %}
