--- a/graduatetracer/tracer/templates/tracer/user/notification_job_catigories.html
+++ b/graduatetracer/tracer/templates/tracer/user/notification_job_catigories.html
@@ -1,5 +1,5 @@
 {%  extends 'tracer/user/template.html' %}
-
+{% block title %}Job Categories Notification{% endblock %}
 {% block content %}
 {% for category in job_category %}
 <div class="container">
