--- a/graduatetracer/tracer/templates/tracer/user/profile.html
+++ b/graduatetracer/tracer/templates/tracer/user/profile.html
@@ -1,4 +1,5 @@
 {%  extends 'tracer/user/template.html' %}
+{% block title %}My Profile{% endblock %}
 {% load static %}
 {% load crispy_forms_tags %}
 {% block content %}
