--- a/graduatetracer/tracer/templates/tracer/admin/sidebar.html
+++ b/graduatetracer/tracer/templates/tracer/admin/sidebar.html
@@ -1,7 +1,8 @@
 <!-- Sidebar -->
 {% load static %}
 
-<ul class="navbar-nav bg-c-lite-green sidebar sidebar-dark accordion " id="accordionSidebar">
+<div class="sidebar">
+<ul style="position: sticky; z-index: 2; top: 0;" class="navbar-nav bg-c-lite-green sidebar sidebar-dark accordion " id="accordionSidebar">
 
     <!-- Sidebar - Brand -->
     <a class="sidebar-brand d-flex align-items-center justify-content-center sticky" href="{% url 'DashboardAdmin' %}">
@@ -102,4 +103,5 @@
     </div>
 
 </ul>
+</div>
 <!-- End of Sidebar -->
