--- a/graduatetracer/tracer/templates/tracer/admin/template.html
+++ b/graduatetracer/tracer/templates/tracer/admin/template.html
@@ -42,7 +42,7 @@
   				<!-- End of Topbar -->
 
           <!-- Begin Page Content -->
-          <div class="container-fluid">
+          <div style="margin-top:100px;" class="container-fluid">
             {% block content %}
 
 
