--- a/graduatetracer/tracer/templates/tracer/systemadmin/admindash.html
+++ b/graduatetracer/tracer/templates/tracer/systemadmin/admindash.html
@@ -1,5 +1,5 @@
 {%  extends 'tracer/systemadmin/templates.html' %}
-
+{% block title %}Admin Dashboard{% endblock %}
 {% load static %}
 {% load widget_tweaks %}
 
