--- a/graduatetracer/tracer/templates/tracer/systemadmin/adprof.html
+++ b/graduatetracer/tracer/templates/tracer/systemadmin/adprof.html
@@ -1,4 +1,5 @@
 {%  extends 'tracer/systemadmin/templates.html' %}
+{% block title %}Admin Profile{% endblock %}
 {% load static %}
 {% load crispy_forms_tags %}
 {% load widget_tweaks %}
