--- a/graduatetracer/tracer/templates/tracer/systemadmin/school_record.html
+++ b/graduatetracer/tracer/templates/tracer/systemadmin/school_record.html
@@ -1,4 +1,5 @@
 {% extends 'tracer/systemadmin/templates.html' %}
+{% block title %}School Records{% endblock %}
 {% block content %}
 
 <style media="screen">
