--- a/graduatetracer/tracer/templates/tracer/systemadmin/templates.html
+++ b/graduatetracer/tracer/templates/tracer/systemadmin/templates.html
@@ -11,7 +11,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <link rel="icon" href="{% static 'img/ctu_logo.png' %}" type="image/gif" sizes="16x16">
-    <title>Admin</title>
+    <title>{% block title %}{% endblock %}</title>
 
     <!-- Custom fonts for this template-->
     <link href="{% static 'vendor/fontawesome-free/css/all.min.css' %}" rel="stylesheet" type="text/css">
