--- a/graduatetracer/tracer/templates/tracer/user/JobExperience/EditExperience.html
+++ b/graduatetracer/tracer/templates/tracer/user/JobExperience/EditExperience.html
@@ -1,4 +1,5 @@
 {% extends 'tracer/user/template.html'%}
+{% block title %}Edit Experience{% endblock %}
 {% load static %}
 {% block content %}
 <div class="container mt-6">
@@ -19,7 +20,7 @@
 
   <div class="card">
     <div class="card-body">
-      <form action = "{% url 'edit_experience' workexperiences.id %}" method = "post">
+      <form action = "{% url 'edit_experience' JobExperiences.id %}" method = "post">
         {% include 'tracer/user/JobExperience/_messages.html' %}
         {% csrf_token %}
 
