--- a/graduatetracer/tracer/templates/tracer/user/JobExperience/homeJobExp.html
+++ b/graduatetracer/tracer/templates/tracer/user/JobExperience/homeJobExp.html
@@ -1,4 +1,5 @@
 {% extends 'tracer/user/template.html'%}
+{% block title %}My Job Experiences{% endblock %}
 {% load static %}
 {% block content %}
 
@@ -85,7 +86,8 @@
                 <td style="white-space: nowrap">{{JobExperiences.experienceStartDate}}</td>
                 <td style="white-space: nowrap">{{JobExperiences.experienceEndDate}}</td>
                 <td><a href ="{% url 'edit_experience' JobExperiences.id %}" title="Edit" class='fa fa-edit btn-success btn-sm'></a></td>
-                <td><a href="{% url 'delete_experience' JobExperiences.id %}" class="fas fa-trash-alt btn-danger btn-sm"></a></td>
+                <td>
+                  <a href="{% url 'delete_experience' JobExperiences.id %}" class="fas fa-trash-alt btn-danger btn-sm"></a></td>
               </tr>
               {% endfor %}
             </tbody>
