--- a/graduatetracer/tracer/templates/tracer/user/about.html
+++ b/graduatetracer/tracer/templates/tracer/user/about.html
@@ -1,7 +1,7 @@
 {% extends 'tracer/user/template.html' %}
+{% block title %}About{% endblock %}
 {% load static %}
 {% block content %}
-
 
 
  <div class="container-fluid  mt-2">
