--- a/graduatetracer/tracer/templates/tracer/user/categorized_job.html
+++ b/graduatetracer/tracer/templates/tracer/user/categorized_job.html
@@ -1,5 +1,5 @@
 {%  extends 'tracer/user/template.html' %}
-
+{% block title %}Categorized Job{% endblock %}
 {% block content %}
 {% for category in job_category %}
   <div class="container">
