--- a/graduatetracer/tracer/templates/tracer/user/notification_job_advertise.html
+++ b/graduatetracer/tracer/templates/tracer/user/notification_job_advertise.html
@@ -1,4 +1,5 @@
 {%  extends 'tracer/user/template.html' %}
+{% block title %}Job Advertise Notification{% endblock %}
 {% load humanize %}
 
 {% block content %}
